# openqmc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .ignore  .justfile  .vale.ini  CHANGELOG.md  CITATION.bib  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  COMMITTERS.csv  CONTRIBUTING.md  Dockerfile  Doxyfile  GOVERNANCE.md  LICENSE-NVIDIA  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  compose.yaml  flake.nix  mkdocs.yml
.github/workflows/: ci-pipeline.yml  coverage-job.yml  coverage-pipeline.yml  documentation-job.yml  static.yml
cmake/: CMakeLists.txt  Config.cmake.in  cmake_uninstall.cmake.in
cmake/examples/config/: CMakeLists.txt  main.cpp
cmake/examples/include/: CMakeLists.txt
cmake/examples/submodule/: CMakeLists.txt
doxygen/: DoxygenLayout.xml  MAINPAGE.md
images/diagrams/original/: example.diagrams  implementation.diagrams
include/: CMakeLists.txt
include/oqmc/: arch.h  bntables.h  encode.h  float.h  gpu.h  lattice.h  latticebn.h  lookup.h  oqmc.h  owen.h  pcg.h  permute.h  pmj.h  pmjbn.h  range.h  rank1.h  reverse.h  rotate.h  sampler.h  sobol.h  sobolbn.h  state.h  stochastic.h  unused.h  zorder.h
include/oqmc/data/hilbert/: indices.txt
include/oqmc/data/lattice/: keys.txt  ranks.txt
include/oqmc/data/pmj/: keys.txt  ranks.txt
include/oqmc/data/sobol/: keys.txt  ranks.txt
mkdocs/: home.html
mkdocs/stylesheets/: basic.css  home.css
python/: utility.py  wrapper.py
python/notebooks/: performance.ipynb  readme-images.ipynb
scripts/: check-coverage.sh  check-documentation.sh  check-format.sh  check-lint.sh  fix-format.sh  fix-lint.sh  save-notebook-images.sh  split-readme.sh
specs/c-abi/: c-interface-for-samplers.md  cpp-library-bindings.md  cpp-library-for-python.md  library-bindings-strategy.md  spec.md
specs/cpp-17-migration/: spec.md
src/: CMakeLists.txt  bntables.cpp  shapes.h
src/bindings/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt  pyproject.toml  wrapper.cpp
src/tests/: CMakeLists.txt  bntables.cpp  encode.cpp  float.cpp  gpu.cpp  hypothesis.h  lattice.cpp  latticebn.cpp  owen.cpp  pcg.cpp  permute.cpp  pmj.cpp  pmjbn.cpp  range.cpp  rank1.cpp  reverse.cpp  sampler.cpp  sobol.cpp  sobolbn.cpp  state.cpp
src/tools/: CMakeLists.txt
src/tools/cli/: CMakeLists.txt  benchmark.cpp  frequency.cpp  generate.cpp  hilbert.cpp  matrices.cpp  optimise.cpp  plot.cpp  print.h  trace.cpp  write.h
src/tools/lib/: CMakeLists.txt  abi.h  benchmark.cpp  benchmark.h  frequency.cpp  frequency.h  generate.cpp  generate.h  optimise.cpp  optimise.h  parallel.h  plot.cpp  plot.h  progress.cpp  progress.h  rng.h  trace.cpp  trace.h  vector.h
tsc/: charter.md  project_intake.md
tsc/meetings/: 2023-06-06.md  kickoff_meeting_agenda.md
tsc/process/: codereview.md  deprecation.md  release.md  security.md
