[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "openqmc"
version = "0.7.1"
description = "Quasi-Monte Carlo sampling library for rendering and graphics applications"
authors = [{name = "OpenQMC Contributors"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.define = {"OPENQMC_PYTHON_BINDINGS" = "ON"}